--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,13 @@ p {
 
 .header {
     background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
-    height: 100em;
-    margin: 0;
-    padding: 0;
+    height: 949px;
 }
 
 .container {
-    margin-left: 210px;
-
+    max-width: 1180px;
+    padding-top: 74px;
+    margin: 0px auto;
 }
 
 .title {
