--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,49 @@ p {
     display: inline-block;
 }
 
-.header {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Roboto';
+    font-style: bold;
+    font-weight: 700;
+}
+
+a {
+    color: #8794BA;
+    font-size: 18px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+header {
     background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
-    height: 949px;
 }
 
 .container {
     max-width: 1180px;
     padding-top: 74px;
     margin: 0px auto;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+    padding: 0;
+    gap: 1.5em;
 }
 
 .title {
@@ -35,4 +69,45 @@ p {
     font-size: 22px;
     line-height: 26px;
     vertical-align: middle;
+}
+
+
+.header_main {
+    position: relative;
+    padding-top: 10%;
+    color: #fff;
+    align-items: center;
+}
+
+.header_main_text_line {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    gap: 5em;
+}
+
+.logo_icon {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 203px;
+    max-width: 497px;
+    height: auto;
+}
+
+.header_slogan {
+    font-family: 'Roboto';
+    font-style: bold;
+    font-weight: 700;
+    font-size: 68px;
+    text-align: center;
+}
+
+.header_logo_text {
+    max-width: 497px;
+    text-align: center;
+    font-size: 26px;
+    padding-top: 2%;
 }
