--- a/css/styles.css
+++ b/css/styles.css
@@ -98,13 +98,18 @@ nav {
     gap: 5em;
 }
 
+@media (max-width: 800px) {
+    .header_main_text_line {
+        flex-wrap: wrap;
+        min-width: 120px;
+    }
+}
+
 .logo_icon {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
+    width: 50%;
     max-height: 203px;
     max-width: 497px;
+    min-width: 285px;
     height: auto;
 }
 
@@ -116,11 +121,32 @@ nav {
     text-align: center;
 }
 
+@media (max-width: 920px) {
+    .header_slogan {
+        font-size: 58px;
+    }
+}
+
+@media (max-width: 800px) {
+    .header_slogan {
+        font-size: 50px;
+    }
+}
+
+
 .header_logo_text {
     max-width: 497px;
     text-align: center;
     font-size: 26px;
     padding-top: 2%;
+}
+
+@media (max-width: 800px) {
+    .header_logo_text {
+        display: flex;
+        flex-direction: row;
+        margin: 0 auto;
+    }
 }
 
 .main {
