Улучшена адаптивность красной линии

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,16 @@ a {
     flex-direction: column;
 }
 
-/* header {
-    background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
-} */
+.red_slice {
+    background-color: #E1214A;
+    width: 100%;
+    margin-top: 10px;
+    height: 765.6px;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+}
 
 .triangle_slicing {
+    margin-top: -780px;
     display: flex;
     background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
     clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
@@ -161,25 +166,25 @@ nav {
     flex-direction: column;
     align-items: flex-end;
     z-index: 2;
-    margin: -350px 180px;
+    margin: -400px 180px;
     padding-bottom: 500px;
 }
 
 @media (max-width: 1600px) {
     .header_illustration {
-        margin: -350px 50px;
+        margin: -400px 50px;
     }
 }
 
 @media (max-width: 1300px) {
     .header_illustration {
-        margin: -350px 10px;
+        margin: -400px 10px;
     }
 }
 
 @media (max-width: 1020px) {
     .header_illustration {
-        margin: -160px;
+        margin: -230px;
         align-items: center;
     }
 }
@@ -204,15 +209,6 @@ nav {
         height: auto;
     }
 }
-
-.header_redline {
-    background-color: #E1214A;
-    height: 20px;
-    width: 100%;
-    margin-top: -100px;
-    transform: skewY(-4.5deg);
-}
-
 
 .main {
     flex: 1 1 auto;
