--- a/css/styles.scss
+++ b/css/styles.scss
@@ -63,7 +63,7 @@ h3 {
 
 // Хэдер ----------------------------------------------------------------------
 .header {
-    background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+    position: relative;
 
     h1,
     h2,
@@ -72,6 +72,24 @@ h3 {
     }
 
     // .header__content
+
+    &__background {
+        position: absolute;
+        width: 100%;
+        z-index: 2;
+        background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+        clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+        padding-bottom: 400px;
+    }
+
+    &__red-slice {
+        position: absolute;
+        background-color: #E1214A;
+        width: 100%;
+        padding-top: 20px;
+        clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+        padding-bottom: 400px;
+    }
 
     &__content {
         padding: 40px 15px;
