--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,9 @@ body {
   font-family: "Century Gothic";
   font-style: normal;
   font-weight: 400;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 ._container {
@@ -143,6 +146,8 @@ h3 {
 
 .header {
   position: relative;
+  display: flex;
+  width: 100%;
 }
 .header h1,
 .header h2,
@@ -156,7 +161,7 @@ h3 {
   background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
   -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
           clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-  padding-bottom: 400px;
+  padding-bottom: 350px;
 }
 .header__red-slice {
   position: absolute;
@@ -165,7 +170,7 @@ h3 {
   padding-top: 20px;
   -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
           clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-  padding-bottom: 400px;
+  padding-bottom: 350px;
 }
 .header__content {
   padding: 40px 15px;
@@ -179,6 +184,68 @@ h3 {
   padding-top: 125px;
   display: flex;
   flex-direction: column;
+}
+.header__illustration {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 3;
+  margin: 31em -16em;
+}
+.header__illustration img {
+  max-width: 100%;
+  width: auto;
+}
+@media (max-width: 1500px) {
+  .header__illustration {
+    margin: 31em -3em;
+  }
+}
+@media (max-width: 1192px) {
+  .header__illustration {
+    margin: 31em -1em;
+  }
+  .header__illustration img {
+    max-width: 33%;
+  }
+}
+@media (max-width: 991.98px) {
+  .header__illustration {
+    margin: 38em 0;
+    align-items: center;
+  }
+  .header__illustration img {
+    max-width: 42%;
+  }
+}
+@media (max-width: 767.98px) {
+  .header__illustration {
+    margin: 50em 0;
+    align-items: center;
+  }
+  .header__illustration img {
+    max-width: 55%;
+  }
+}
+@media (max-width: 479.98px) {
+  .header__illustration {
+    margin-top: 55em;
+    align-items: center;
+  }
+  .header__illustration img {
+    max-width: 70%;
+  }
+}
+@media (max-width: 358px) {
+  .header__illustration {
+    margin-top: 70em;
+    align-items: center;
+  }
+  .header__illustration img {
+    max-width: 70%;
+  }
 }
 
 .menu__logo {
