--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,6 +21,9 @@ body {
     font-family: 'Century Gothic';
     font-style: normal;
     font-weight: 400;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 ._container {
@@ -64,6 +67,8 @@ h3 {
 // Хэдер ----------------------------------------------------------------------
 .header {
     position: relative;
+    display: flex;
+    width: 100%;
 
     h1,
     h2,
@@ -79,7 +84,7 @@ h3 {
         z-index: 2;
         background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
         clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-        padding-bottom: 400px;
+        padding-bottom: 350px;
     }
 
     &__red-slice {
@@ -88,7 +93,7 @@ h3 {
         width: 100%;
         padding-top: 20px;
         clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-        padding-bottom: 400px;
+        padding-bottom: 350px;
     }
 
     &__content {
@@ -107,6 +112,69 @@ h3 {
         padding-top: 125px;
         display: flex;
         flex-direction: column;
+    }
+
+    &__illustration {
+        position: absolute;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        z-index: 3;
+        margin: 31em -16em;
+
+        img {
+            max-width: 100%;
+            width: auto;
+        }
+
+        @media (max-width: 1500px) {
+            margin: 31em -3em;
+        }
+
+        @media (max-width: $md1) {
+            margin: 31em -1em;
+
+            img {
+                max-width: 33%;
+            }
+        }
+
+        @media (max-width: $md2) {
+            margin: 38em 0;
+            align-items: center;
+
+            img {
+                max-width: 42%;
+            }
+        }
+
+        @media (max-width: $md3) {
+            margin: 50em 0;
+            align-items: center;
+
+            img {
+                max-width: 55%;
+            }
+        }
+
+        @media (max-width: $md4) {
+            margin-top: 55em;
+            align-items: center;
+
+            img {
+                max-width: 70%;
+            }
+        }
+
+        @media (max-width: 358px) {
+            margin-top: 70em;
+            align-items: center;
+
+            img {
+                max-width: 70%;
+            }
+        }
     }
 }
 
