--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,22 @@ h3 {
   position: relative;
   display: flex;
   width: 100%;
+  padding-bottom: 1000px;
+}
+@media (max-width: 767.98px) {
+  .header {
+    padding-bottom: 1180px;
+  }
+}
+@media (max-width: 479.98px) {
+  .header {
+    padding-bottom: 1240px;
+  }
+}
+@media (max-width: 345px) {
+  .header {
+    padding-bottom: 1370px;
+  }
 }
 .header h1,
 .header h2,
