--- a/css/styles.scss
+++ b/css/styles.scss
@@ -69,6 +69,19 @@ h3 {
     position: relative;
     display: flex;
     width: 100%;
+    padding-bottom: 1000px;
+
+    @media (max-width: $md3) {
+        padding-bottom: 1180px;
+    }
+
+    @media (max-width: $md4) {
+        padding-bottom: 1240px;
+    }
+
+    @media (max-width: 345px) {
+        padding-bottom: 1370px;
+    }
 
     h1,
     h2,
