--- a/css/styles.css
+++ b/css/styles.css
@@ -1,275 +1,372 @@
-body {
-    padding: 0;
-    margin: 0;
-    color: #fff;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
+/* Century Gothic font */
+@font-face {
+  font-family: "Century Gothic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Century Gothic"), url("../fonts/centurygothic.woff2") format("woff2"), url("../fonts/centurygothic.woff") format("woff"), url("../fonts/centurygothic.ttf") format("ttf");
 }
-
-p {
-    display: inline-block;
+@font-face {
+  font-family: "Century Gothic";
+  font-style: normal;
+  font-weight: bold;
+  src: local("Century Gothic"), url("../fonts/centurygothic_bold.woff2") format("woff2"), url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/centurygothic_bold.ttf") format("ttf");
 }
-
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
-    font-family: 'Roboto';
-    font-style: bold;
-    font-weight: 700;
+h6,
+p,
+blockquote,
+a,
+em,
+img,
+strong,
+sub,
+b,
+ul,
+li,
+table,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+footer,
+header,
+menu,
+nav,
+section,
+summary,
+time,
+mark {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 a {
-    color: #8794BA;
-    font-size: 18px;
-    display: inline-block;
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;
 }
 
-.wrapper {
-    min-height: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
+body {
+  color: #000;
+  font-size: 14px;
+  font-family: "Century Gothic";
+  font-style: normal;
+  font-weight: 400;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+._container {
+  max-width: 1180px;
+  margin: 0 auto;
+}
+@media (max-width: 1192px) {
+  ._container {
+    max-width: 970px;
+  }
+}
+@media (max-width: 991.98px) {
+  ._container {
+    max-width: 750px;
+  }
+}
+@media (max-width: 767.98px) {
+  ._container {
+    max-width: none;
+    padding: 0 10px;
+  }
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 68px;
+  line-height: 80px;
+}
+
+h2 {
+  color: #243B55;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 30px;
 }
 
 .header {
-    position: relative;
-    padding-bottom: 1000px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  padding-bottom: 1000px;
 }
-
-.red_slice {
-    position: absolute;
-    z-index: 1;
-    background-color: #E1214A;
-    width: 100%;
-    margin-top: 20px;
-    height: 765.6px;
-    clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-    padding-bottom: 400px;
+@media (max-width: 767.98px) {
+  .header {
+    padding-bottom: 1180px;
+  }
 }
-
-.triangle_slicing {
-    position: absolute;
-    width: 100%;
-    z-index: 2;
-    display: flex;
-    background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
-    clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
-    padding-bottom: 400px;
+@media (max-width: 479.98px) {
+  .header {
+    padding-bottom: 1240px;
+  }
 }
-
-.header_container {
-    max-width: 1180px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 74px;
-    margin: 0px auto;
-    box-sizing: content-box;
+@media (max-width: 345px) {
+  .header {
+    padding-bottom: 1370px;
+  }
 }
-
-nav {
-    display: flex;
-    flex-direction: row;
+.header h1,
+.header h2,
+.header h3 {
+  color: #fff;
+}
+.header__background {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+  -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+          clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+  padding-bottom: 350px;
+}
+.header__red-slice {
+  position: absolute;
+  background-color: #E1214A;
+  width: 100%;
+  padding-top: 20px;
+  -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+          clip-path: polygon(0% 0%, 0% 100%, 100% 75%, 100% 0%);
+  padding-bottom: 350px;
+}
+.header__content {
+  padding: 40px 15px;
+}
+.header__menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.header__main {
+  padding-top: 125px;
+  display: flex;
+  flex-direction: column;
+}
+.header__illustration {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 3;
+  margin: 31em -16em;
+}
+.header__illustration img {
+  max-width: 100%;
+  width: auto;
+}
+@media (max-width: 1500px) {
+  .header__illustration {
+    margin: 31em -3em;
+  }
+}
+@media (max-width: 1192px) {
+  .header__illustration {
+    margin: 31em -1em;
+  }
+  .header__illustration img {
+    max-width: 33%;
+  }
+}
+@media (max-width: 991.98px) {
+  .header__illustration {
+    margin: 38em 0;
     align-items: center;
+  }
+  .header__illustration img {
+    max-width: 42%;
+  }
 }
-
-.menu {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+@media (max-width: 767.98px) {
+  .header__illustration {
+    margin: 50em 0;
     align-items: center;
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    padding: 0;
-    gap: 1.5em;
+  }
+  .header__illustration img {
+    max-width: 55%;
+  }
 }
-
-.title {
-    text-decoration: none;
-}
-
-.title_icon {
-    vertical-align: middle;
-}
-
-.title_text {
-    color: #fff;
-    font-size: 22px;
-    line-height: 26px;
-    vertical-align: middle;
-}
-
-
-.header_main {
-    position: relative;
-    padding-top: 10%;
-    color: #fff;
+@media (max-width: 479.98px) {
+  .header__illustration {
+    margin-top: 55em;
     align-items: center;
+  }
+  .header__illustration img {
+    max-width: 70%;
+  }
 }
-
-.header_main_text_line {
-    display: flex;
-    flex-direction: row;
+@media (max-width: 358px) {
+  .header__illustration {
+    margin-top: 70em;
     align-items: center;
-    text-align: center;
-    gap: 5em;
+  }
+  .header__illustration img {
+    max-width: 70%;
+  }
 }
 
-@media (max-width: 800px) {
-    .header_main_text_line {
-        flex-wrap: wrap;
-        min-width: 120px;
-    }
+.menu__logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.menu__body {
+  width: 50%;
+  margin: 0 auto;
+  padding: 0;
+}
+.menu__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  gap: 1.5em;
+}
+.menu__list li {
+  display: inline;
+}
+.menu__link {
+  color: #8794BA;
+  font-size: 18px;
 }
 
-.logo_icon {
-    width: 50%;
-    max-height: 203px;
-    max-width: 497px;
-    min-width: 285px;
-    height: auto;
+.logo__image {
+  width: 43.38px;
+  height: 48px;
+}
+.logo__text {
+  color: #fff;
+  font-size: 22px;
+  line-height: 26px;
+  vertical-align: middle;
 }
 
-.header_slogan {
-    font-family: 'Roboto';
-    font-style: bold;
-    font-weight: 700;
-    font-size: 68px;
-    text-align: center;
+.header-main__logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
-
-@media (max-width: 920px) {
-    .header_slogan {
-        font-size: 58px;
-    }
-}
-
-@media (max-width: 800px) {
-    .header_slogan {
-        font-size: 50px;
-    }
-}
-
-.header_logo_text {
-    max-width: 497px;
-    text-align: left;
-    font-size: 26px;
-    padding-top: 2%;
-}
-
-@media (max-width: 800px) {
-    .header_logo_text {
-        display: flex;
-        flex-direction: row;
-        margin: 0 auto;
-    }
-}
-
-.header_illustration {
-    position: absolute;
-    right: 0;
-    z-index: 5;
-    display: flex;
+@media (max-width: 767.98px) {
+  .header-main__logo {
     flex-direction: column;
-    align-items: flex-end;
-    margin: 360px 180px;
+  }
 }
-
-@media (max-width: 1600px) {
-    .header_illustration {
-        margin: 360px 50px;
-    }
+.header-main__image {
+  width: 50%;
+  max-height: 203px;
+  max-width: 497px;
+  min-width: 285px;
+  height: auto;
 }
-
-@media (max-width: 1300px) {
-    .header_illustration {
-        margin: 360px 10px;
-    }
+@media (max-width: 1192px) {
+  .header-main__image {
+    max-width: 440px;
+  }
 }
-
-@media (max-width: 1020px) {
-    .header {
-        padding-bottom: 1100px;
-    }
-
-    .header_illustration {
-        margin-top: 500px;
-        align-items: center;
-    }
+@media (max-width: 991.98px) {
+  .header-main__image {
+    max-width: 330px;
+  }
 }
-
-@media (max-width: 800px) {
-    .header {
-        padding-bottom: 1200px;
-    }
-
-    .header_illustration {
-        margin-top: 600px;
-        align-items: center;
-    }
+.header-main__title {
+  display: inline-block;
 }
-
-@media (max-width: 550px) {
-    .header_illustration img {
-        width: 500px;
-        height: auto;
-    }
+@media (max-width: 479.98px) {
+  .header-main__title {
+    text-align: center;
+  }
 }
-
-@media (max-width: 450px) {
-    .header_illustration img {
-        margin-top: 30px;
-        width: 400px;
-        height: auto;
-    }
+.header-main__description {
+  padding-top: 50px;
 }
-
-@media (max-width: 425px) {
-    .header_illustration img {
-        margin-top: 70px;
-        width: 400px;
-        height: auto;
-    }
+@media (max-width: 767.98px) {
+  .header-main__description {
+    text-align: center;
+  }
 }
-
-@media (max-width: 400px) {
-    .header_illustration img {
-        margin-top: 120px;
-        width: 400px;
-        height: auto;
-    }
-
-    .header_slogan {
-        font-size: 46px;
-    }
-
-    .header_main_text_line {
-        gap: 1.5em;
-    }
+@media (max-width: 1192px) {
+  .header-main h1 {
+    font-size: 58px;
+  }
+  .header-main h3 {
+    font-size: 24px;
+  }
 }
-
-@media (max-width: 385px) {
-    .header_illustration img {
-        margin-top: 180px;
-        width: 400px;
-        height: auto;
-    }
+@media (max-width: 991.98px) {
+  .header-main h1 {
+    font-size: 45px;
+  }
+  .header-main h3 {
+    font-size: 20px;
+  }
 }
-
-@media (max-width: 350px) {
-    .header_illustration img {
-        margin-top: 220px;
-        width: 350px;
-        height: auto;
-    }
-}
-
-.main {
-    flex: 1 1 auto;
-    color: #000;
-}
+@media (max-width: 479.98px) {
+  .header-main h1 {
+    font-size: 38px;
+  }
+  .header-main h3 {
+    font-size: 18px;
+  }
+}/*# sourceMappingURL=styles.css.map */
