--- a/css/styles.css
+++ b/css/styles.css
@@ -611,6 +611,15 @@ h3 {
   font-weight: 800;
   color: #fff;
 }
+.masters__description-name::after {
+  display: block;
+  width: 150px;
+  height: 0;
+  margin: 0 auto;
+  content: "";
+  margin-top: 20px;
+  border-top: 5px solid #ED99AB;
+}
 .masters__photo img {
   border-radius: 30px;
   box-shadow: 5px 7px 35px 9px rgba(47, 60, 79, 0.4);
