--- a/css/styles.scss
+++ b/css/styles.scss
@@ -633,7 +633,6 @@ h3 {
     // .masters__description-name
 
     &__description-name {
-
         padding-bottom: 30px;
 
         p {
@@ -657,6 +656,16 @@ h3 {
         &_accent {
             font-weight: 800;
             color: #fff;
+        }
+
+        &::after {
+            display: block;
+            width: 150px;
+            height: 0;
+            margin: 0 auto;
+            content: "";
+            margin-top: 20px;
+            border-top: 5px solid #ED99AB;
         }
     }
 
