--- a/css/styles.css
+++ b/css/styles.css
@@ -137,10 +137,10 @@ h2 {
   font-size: 40px;
   line-height: 47px;
 }
-@media (max-height: 479.98px) {
+@media (max-width: 479.98px) {
   h2 {
     font-size: 32px;
-    line-height: 45px;
+    line-height: 44px;
   }
 }
 
@@ -148,6 +148,17 @@ h3 {
   font-weight: 400;
   font-size: 26px;
   line-height: 30px;
+}
+
+.link {
+  color: #8794BA;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+  cursor: pointer;
+}
+.link:hover, .link:focus {
+  color: #cbd0df;
 }
 
 .header {
@@ -270,11 +281,6 @@ h3 {
   }
 }
 
-.menu__logo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
 .menu__body {
   width: 50%;
   margin: 0 auto;
@@ -292,14 +298,12 @@ h3 {
 .menu__list li {
   display: inline;
 }
-.menu__link {
-  color: #8794BA;
-  font-size: 18px;
-}
-.menu__link:hover, .menu__link:focus {
-  color: #cbd0df;
-}
 
+.logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .logo__image {
   width: 43.38px;
   height: 48px;
@@ -651,4 +655,59 @@ h3 {
 }
 .location__title {
   padding: 0 10px;
+}
+
+.footer__background {
+  background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+}
+.footer__content {
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.footer__main {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-items: space-between;
+  gap: 50px;
+}
+@media (max-width: 991.98px) {
+  .footer__main {
+    gap: 30px;
+  }
+}
+@media (max-width: 767.98px) {
+  .footer__main {
+    gap: 30px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__main a {
+    font-size: 16px;
+  }
+}
+.footer__logo {
+  align-self: center;
+}
+.footer__title {
+  text-align: center;
+}
+.footer-text {
+  color: #fff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+}
+@media (max-width: 991.98px) {
+  .footer-text {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+.footer__copyright {
+  padding-top: 50px;
+  padding-bottom: 20px;
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
