--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,9 +56,9 @@ h2 {
     font-size: 40px;
     line-height: 47px;
 
-    @media (max-height: $md4) {
+    @media (max-width: $md4) {
         font-size: 32px;
-        line-height: 45px;
+        line-height: 44px;
     }
 }
 
@@ -70,6 +70,20 @@ h3 {
 
 
 // Хэдер ----------------------------------------------------------------------
+
+.link {
+    color: #8794BA;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+        color: #cbd0df;
+    }
+}
+
 .header {
     position: relative;
     display: flex;
@@ -198,14 +212,6 @@ h3 {
 
 .menu {
 
-    // .menu__logo
-
-    &__logo {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
     // .menu__body
 
     &__body {
@@ -229,21 +235,12 @@ h3 {
         justify-content: space-between;
         gap: 1.5em;
     }
-
-    // .menu__link
-
-    &__link {
-        color: #8794BA;
-        font-size: 18px;
-
-        &:hover,
-        &:focus {
-            color: #cbd0df;
-        }
-    }
 }
 
 .logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
     // .logo__image
 
@@ -717,5 +714,82 @@ h3 {
 
     &__title {
         padding: 0 10px;
+    }
+}
+
+// Футер ---------------------------------------------------------
+.footer {
+
+    // .footer__background
+
+    &__background {
+        background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+    }
+
+    // .footer__content
+
+    &__content {
+        padding-top: 60px;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+    }
+
+    // .footer__main
+
+    &__main {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-items: space-between;
+        gap: 50px;
+
+        @media (max-width: $md2) {
+            gap: 30px;
+        }
+
+        @media (max-width: $md3) {
+            gap: 30px;
+            flex-direction: column;
+            align-items: center;
+
+            a {
+                font-size: 16px;
+            }
+        }
+    }
+
+    // .footer__logo
+
+    &__logo {
+        align-self: center;
+    }
+
+    // .footer__title
+
+    &__title {
+        text-align: center;
+    }
+
+    // .footer-text
+
+    &-text {
+        color: #fff;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 21px;
+
+        @media (max-width: $md2) {
+            font-size: 16px;
+            line-height: 18px;
+        }
+    }
+
+    // .footer__copyright
+
+    &__copyright {
+        padding-top: 50px;
+        padding-bottom: 20px;
+        text-align: center;
     }
 }
