--- a/css/styles.scss
+++ b/css/styles.scss
@@ -713,8 +713,8 @@ h3 {
     // .location__title
 
     &__title {
-        padding: 0 10px;
-        padding-bottom: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
