--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,6 +16,9 @@ $md4: 479.98px;
 
 // Базовые элементы -----------------------------------------------------
 body {
+    display: flex;
+    // position: relative;
+    flex-direction: column;
     color: #000;
     font-size: 14px;
     font-family: 'Century Gothic';
@@ -141,6 +144,7 @@ h3 {
     }
 
     &__main {
+        flex: 1 1 auto;
         padding-top: 125px;
         display: flex;
         flex-direction: column;
@@ -725,6 +729,20 @@ h3 {
 
     &__background {
         background: linear-gradient(98.99deg, #141E30 39.07%, #243B55 90.1%);
+        position: absolute;
+        width: 100%;
+        z-index: 2;
+        clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 0% 100%);
+        padding-top: 80px;
+    }
+
+    &__red-slice {
+        position: absolute;
+        z-index: 3;
+        width: 100%;
+        clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 0% 100%);
+        background-color: #E1214A;
+        padding-bottom: 250px;
     }
 
     // .footer__content
