--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ a {
 
 body {
   display: flex;
+  position: relative;
   flex-direction: column;
   color: #000;
   font-size: 14px;
@@ -672,12 +673,30 @@ h3 {
 }
 .footer__red-slice {
   position: absolute;
-  z-index: 3;
   width: 100%;
-  -webkit-clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0% 44%, 100% 0%, 100% 100%, 0% 100%);
+          clip-path: polygon(0% 44%, 100% 0%, 100% 100%, 0% 100%);
   background-color: #E1214A;
-  padding-bottom: 250px;
+  bottom: -280px;
+}
+@media (max-width: 991.98px) {
+  .footer__red-slice {
+    bottom: -260px;
+  }
+}
+@media (max-width: 767.98px) {
+  .footer__red-slice {
+    bottom: -405px;
+    -webkit-clip-path: polygon(0% 41%, 100% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(0% 41%, 100% 0%, 100% 100%, 0% 100%);
+  }
+}
+@media (max-width: 479.98px) {
+  .footer__red-slice {
+    bottom: -440px;
+    -webkit-clip-path: polygon(0% 41%, 100% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(0% 41%, 100% 0%, 100% 100%, 0% 100%);
+  }
 }
 .footer__content {
   padding-top: 60px;
